# ex-rs

./: Cargo.toml  README.md  config.toml
src/: lib.rs
src/conf/: config.rs  mod.rs  vars.rs
src/db/: database.rs  mod.rs
src/helpers/: cache.rs  coin_symbol.rs  mod.rs
src/service/: check_diff.rs  mod.rs
