[package]
name = "ex-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
once_cell = "1.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.45"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
ring = "0.16"
tokio-tungstenite = "0.16"
tokio = { version = "1.14", features = ["full"] }
binance-rs-async = "1.1.7"
rust_decimal = "1.18.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "decimal"] }
dashmap = "5.3.3"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time", ] }
time = { version = "0.3", features = ["macros"] }
sled = "0.34.7"
bincode = "1.3.3"